Fixed center aligned

--- a/src/components/authentication-2/authentication-2.scss
+++ b/src/components/authentication-2/authentication-2.scss
@@ -1,16 +1,15 @@
 @import "../../styles/button/button.scss";
 
 .login-page {
-    margin-top: 40px;
-
     //  margin: auto;
     width: 100%;
     display: flex;
     justify-content: center;
+    height: 100vh;
 
     .login-wrapper {
-        margin: 50px;
-      //   height: 100%;
+        //   height: 100%;
+        align-self: center;
         width: 60%;
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
         display: flex;
@@ -103,24 +102,25 @@
             display: block;
             margin: 0;
             width: 100%;
-            box-shadow:none;
+            box-shadow: none;
 
             .login-part-1 {
-               min-height: 230px;
-               width: 100%;
+                min-height: 230px;
+                width: 100%;
             }
+
             .logo {
-               img {
-                  top: 15%;
-                  left: 50%;
-                   z-index: 2;
-                   width: 200px;
-                   
-               }
-           }
+                img {
+                    top: 15%;
+                    left: 50%;
+                    z-index: 2;
+                    width: 200px;
+                }
+            }
+
             .login-part-2 {
-               width: 100%;
-               border: none;
+                width: 100%;
+                border: none;
             }
         }
     }
